--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -3,7 +3,7 @@
     .site-header {
         min-height: 450px;
       /*  background-color: $brand-color; */
-        background-image: url('//smolensk.goroda.vip/images/smo.jpg');
+        background-image: url('//smolensk.goroda.vip/images/smo2.jpg');
         background-size: cover;
         background-position: center -170px;
         background-attachment: fixed;
